--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 fastapi = {extras = ["all"],version = "*"}
 uvicorn = "*"
 sqlalchemy = "*"
+pymysql = "*"
 
 [requires]
 python_version = "3.7"
